--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -6202,7 +6202,7 @@ div[data-plugin="filter"] .fx-catalog-modular-form-content {
     .language .tx-srlanguagemenu-pi1 > div.CUR a {
       color: #db514b; }
 
-.tx-dynalist-pi1-recordlist  {
+.tx-dynalist-pi1-recordlist┬á {
   padding-bottom: 0px; }
 
 .article-image img {
@@ -7854,6 +7854,310 @@ body[data-country='SEN'] {
   body[data-country='SEN'] .fm-controller-box-item .ui-widget-header {
     background-color: #db514b; }
   body[data-country='SEN'] .pulse-button {
+    box-shadow: 0 0 0 0 rgba(219, 81, 75, 0.7); }
+@-webkit-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(219, 81, 75, 0); } }
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(219, 81, 75, 0); } }
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(219, 81, 75, 0); } }
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(219, 81, 75, 0); } }
+body[data-country='GAB'] {
+  /* Radio Buttons */
+  /* Checkbox Buttons */ }
+  body[data-country='GAB'] .country-welcome {
+    background-color: #f09752; }
+  body[data-country='GAB'] .country-details {
+    background-image: url("http://fenixrepo.fao.org/countrystat/assets/GAB/GAB-home.jpg"); }
+  body[data-country='GAB'] .home-content {
+    background-color: #2f5674; }
+    body[data-country='GAB'] .home-content .home-detail-pointer {
+      background-color: #f8cba9; }
+      body[data-country='GAB'] .home-content .home-detail-pointer:before {
+        border-color: transparent transparent transparent #f8cba9; }
+  body[data-country='GAB'] .country-details .home-stats-footer {
+    background-color: rgba(47, 86, 116, 0.5); }
+  body[data-country='GAB'] .partners-holder {
+    background-color: #e0f1ee; }
+    body[data-country='GAB'] .partners-holder h4 {
+      color: #abb9c4; }
+  body[data-country='GAB'] .home-tile.aims ol li:before {
+    color: #b8d7da; }
+  body[data-country='GAB'] .home-tile.gray {
+    background-color: #869c93; }
+    body[data-country='GAB'] .home-tile.gray h2 {
+      font-weight: 100; }
+  body[data-country='GAB'] .home-tile.map {
+    background-color: #97bead;
+    background-image: url("http://fenixrepo.fao.org/countrystat/assets/GAB/GAB-map.svg"); }
+    body[data-country='GAB'] .home-tile.map:hover {
+      background-position: 50% 76%; }
+    body[data-country='GAB'] .home-tile.map h4 {
+      background-color: #97bead; }
+  body[data-country='GAB'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
+    color: #f07f52; }
+  body[data-country='GAB'] #sidebar-wrapper {
+    background-color: #2d3e46; }
+    body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li {
+      background-color: #345962; }
+      body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a {
+        background-color: #3f7d8b; }
+        body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a:before {
+          background-color: #f07f52; }
+        body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a:hover, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a:active, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a:focus, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li.active a:visited {
+          background-color: #3f7d8b; }
+      body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li a:hover, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li a:active, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li a:focus, body[data-country='GAB'] #sidebar-wrapper .sidebar-nav li a:visited {
+        background-color: #3f7d8b; }
+  body[data-country='GAB'] a {
+    color: #f07f52; }
+  body[data-country='GAB'] h1 {
+    color: #f07f52; }
+  body[data-country='GAB'] h2 {
+    color: #d48b6e; }
+  body[data-country='GAB'] h3 {
+    color: #c19381; }
+  body[data-country='GAB'] h4 {
+    color: #ae9b94; }
+  body[data-country='GAB'] h1 small, body[data-country='GAB'] h2 small, body[data-country='GAB'] h3 small, body[data-country='GAB'] h4 small, body[data-country='GAB'] h5 small, body[data-country='GAB'] h6 small, body[data-country='GAB'] .h1 small, body[data-country='GAB'] .h2 small, body[data-country='GAB'] .h3 small, body[data-country='GAB'] .h4 small, body[data-country='GAB'] .h5 small, body[data-country='GAB'] .h6 small, body[data-country='GAB'] h1 .small, body[data-country='GAB'] h2 .small, body[data-country='GAB'] h3 .small, body[data-country='GAB'] h4 .small, body[data-country='GAB'] h5 .small, body[data-country='GAB'] h6 .small, body[data-country='GAB'] .h1 .small, body[data-country='GAB'] .h2 .small, body[data-country='GAB'] .h3 .small, body[data-country='GAB'] .h4 .small, body[data-country='GAB'] .h5 .small, body[data-country='GAB'] .h6 .small {
+    color: #f07f52; }
+  body[data-country='GAB'] .fx-text-primary-color {
+    color: #f07f52; }
+  body[data-country='GAB'] .fx-background-color-primary-color {
+    background-color: #f07f52; }
+  body[data-country='GAB'] .fx-button-primary-color {
+    color: white;
+    border-color: #ec5c23;
+    background-color: #f07f52; }
+    body[data-country='GAB'] .fx-button-primary-color:hover {
+      color: white;
+      border-color: #ec5c23;
+      background-color: #ee6e3b; }
+    body[data-country='GAB'] .fx-button-primary-color:focus {
+      color: white;
+      border-color: #ca4612;
+      background-color: #e24e14; }
+  body[data-country='GAB'] input[type="radio"] + label:before {
+    border-color: #f07f52; }
+  body[data-country='GAB'] input[type="radio"]:checked + label {
+    color: #f07f52; }
+  body[data-country='GAB'] input[type="checkbox"] + label:before {
+    border-color: #f07f52; }
+  body[data-country='GAB'] input[type="checkbox"]:checked + label {
+    color: #f07f52; }
+  body[data-country='GAB'] .jstree-default .jstree-wholerow-clicked {
+    background: none;
+    background-color: white; }
+  body[data-country='GAB'] .jstree-default .jstree-wholerow-hovered {
+    background: none;
+    background-color: white; }
+  body[data-country='GAB'] .jstree-default .jstree-disabled.jstree-clicked {
+    background: none;
+    background-color: white; }
+  body[data-country='GAB'] .irs-bar {
+    border-top: 1px solid #f07f52;
+    border-bottom: 1px solid #f07f52; }
+  body[data-country='GAB'] .irs-bar-edge {
+    border: 1px solid #f07f52; }
+  body[data-country='GAB'] .irs-bar, body[data-country='GAB'] .irs-bar-edge {
+    background: #f07f52; }
+  body[data-country='GAB'] .irs-from, body[data-country='GAB'] .irs-to, body[data-country='GAB'] .irs-single {
+    color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] .day.active {
+    background-color: #f07f52; }
+    body[data-country='GAB'] [data-selector-time] .day.active:hover {
+      background-color: #c19381; }
+  body[data-country='GAB'] [data-selector-time] .day.today:before {
+    border-bottom-color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] .month.active {
+    background-color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] .year.active {
+    background-color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] .fx-time-addon {
+    color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] [data-action="incrementHours"], body[data-country='GAB'] [data-selector-time] [data-action="decrementHours"], body[data-country='GAB'] [data-selector-time] [data-action="incrementMinutes"], body[data-country='GAB'] [data-selector-time] [data-action="decrementMinutes"] {
+    color: #f07f52; }
+  body[data-country='GAB'] [data-selector-time] [data-action="togglePicker"] span {
+    color: #f07f52; }
+  body[data-country='GAB'] .cat-toolbar button:hover {
+    color: #f07f52; }
+  body[data-country='GAB'] .bootstrap-table .pagination > li > a, body[data-country='GAB'] .bootstrap-table .pagination > li > span {
+    color: #f07f52; }
+  body[data-country='GAB'] .bootstrap-table .pagination > .active > a, body[data-country='GAB'] .bootstrap-table .pagination > .active > a:hover, body[data-country='GAB'] .bootstrap-table .pagination > .active > a:focus, body[data-country='GAB'] .bootstrap-table .pagination > .active > span, body[data-country='GAB'] .bootstrap-table .pagination > .active > span:hover, body[data-country='GAB'] .bootstrap-table .pagination > .active > span:focus {
+    color: white;
+    background-color: #f07f52;
+    border-color: #f07f52; }
+  body[data-country='GAB'] .vb-toolbar button:hover {
+    color: #f07f52; }
+  body[data-country='GAB'] .dropdown-menu a {
+    color: inherit; }
+  body[data-country='GAB'] .swiper-button-prev {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'#f07f52'%2F%3E%3C%2Fsvg%3E"); }
+  body[data-country='GAB'] .swiper-button-next {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'#f07f52'%2F%3E%3C%2Fsvg%3E"); }
+  body[data-country='GAB'] .swiper-pagination-bullet-active {
+    background: #f07f52; }
+  body[data-country='GAB'] .gt-row-over td {
+    border-bottom-color: #f07f52; }
+  body[data-country='GAB'] .fm-controller-box-item .ui-widget-header {
+    background-color: #f07f52; }
+  body[data-country='GAB'] .pulse-button {
+    box-shadow: 0 0 0 0 rgba(240, 127, 82, 0.7); }
+@-webkit-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
+body[data-country='COG'] {
+  /* Radio Buttons */
+  /* Checkbox Buttons */ }
+  body[data-country='COG'] .country-welcome {
+    background-color: #e4c779; }
+  body[data-country='COG'] .country-details {
+    background-image: url("http://fenixrepo.fao.org/countrystat/assets/COG/COG-home.jpg"); }
+  body[data-country='COG'] .home-content {
+    background-color: #2b686a; }
+    body[data-country='COG'] .home-content .home-detail-pointer {
+      background-color: #f5e5bb; }
+      body[data-country='COG'] .home-content .home-detail-pointer:before {
+        border-color: transparent transparent transparent #f5e5bb; }
+  body[data-country='COG'] .country-details .home-stats-footer {
+    background-color: rgba(43, 104, 106, 0.5); }
+  body[data-country='COG'] .partners-holder {
+    background-color: #e0f1ee; }
+    body[data-country='COG'] .partners-holder h4 {
+      color: #abb9c4; }
+  body[data-country='COG'] .home-tile.aims ol li:before {
+    color: #b8d7da; }
+  body[data-country='COG'] .home-tile.gray {
+    background-color: #869c93; }
+    body[data-country='COG'] .home-tile.gray h2 {
+      font-weight: 100; }
+  body[data-country='COG'] .home-tile.map {
+    background-color: #97bead;
+    background-image: url("http://fenixrepo.fao.org/countrystat/assets/COG/COG-map.svg"); }
+    body[data-country='COG'] .home-tile.map:hover {
+      background-position: 50% 76%; }
+    body[data-country='COG'] .home-tile.map h4 {
+      background-color: #97bead; }
+  body[data-country='COG'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
+    color: #db514b; }
+  body[data-country='COG'] #sidebar-wrapper {
+    background-color: #29403e; }
+    body[data-country='COG'] #sidebar-wrapper .sidebar-nav li {
+      background-color: #305a52; }
+      body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a {
+        background-color: #3a7f70; }
+        body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a:before {
+          background-color: #db514b; }
+        body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a:hover, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a:active, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a:focus, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li.active a:visited {
+          background-color: #3a7f70; }
+      body[data-country='COG'] #sidebar-wrapper .sidebar-nav li a:hover, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li a:active, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li a:focus, body[data-country='COG'] #sidebar-wrapper .sidebar-nav li a:visited {
+        background-color: #3a7f70; }
+  body[data-country='COG'] a {
+    color: #db514b; }
+  body[data-country='COG'] h1 {
+    color: #db514b; }
+  body[data-country='COG'] h2 {
+    color: #bb6f6b; }
+  body[data-country='COG'] h3 {
+    color: #a58381; }
+  body[data-country='COG'] h4 {
+    color: #939393; }
+  body[data-country='COG'] h1 small, body[data-country='COG'] h2 small, body[data-country='COG'] h3 small, body[data-country='COG'] h4 small, body[data-country='COG'] h5 small, body[data-country='COG'] h6 small, body[data-country='COG'] .h1 small, body[data-country='COG'] .h2 small, body[data-country='COG'] .h3 small, body[data-country='COG'] .h4 small, body[data-country='COG'] .h5 small, body[data-country='COG'] .h6 small, body[data-country='COG'] h1 .small, body[data-country='COG'] h2 .small, body[data-country='COG'] h3 .small, body[data-country='COG'] h4 .small, body[data-country='COG'] h5 .small, body[data-country='COG'] h6 .small, body[data-country='COG'] .h1 .small, body[data-country='COG'] .h2 .small, body[data-country='COG'] .h3 .small, body[data-country='COG'] .h4 .small, body[data-country='COG'] .h5 .small, body[data-country='COG'] .h6 .small {
+    color: #db514b; }
+  body[data-country='COG'] .fx-text-primary-color {
+    color: #db514b; }
+  body[data-country='COG'] .fx-background-color-primary-color {
+    background-color: #db514b; }
+  body[data-country='COG'] .fx-button-primary-color {
+    color: white;
+    border-color: #cb2f29;
+    background-color: #db514b; }
+    body[data-country='COG'] .fx-button-primary-color:hover {
+      color: white;
+      border-color: #cb2f29;
+      background-color: #d73c36; }
+    body[data-country='COG'] .fx-button-primary-color:focus {
+      color: white;
+      border-color: #a02520;
+      background-color: #b52a24; }
+  body[data-country='COG'] input[type="radio"] + label:before {
+    border-color: #db514b; }
+  body[data-country='COG'] input[type="radio"]:checked + label {
+    color: #db514b; }
+  body[data-country='COG'] input[type="checkbox"] + label:before {
+    border-color: #db514b; }
+  body[data-country='COG'] input[type="checkbox"]:checked + label {
+    color: #db514b; }
+  body[data-country='COG'] .jstree-default .jstree-wholerow-clicked {
+    background: none;
+    background-color: #fdf5f5; }
+  body[data-country='COG'] .jstree-default .jstree-wholerow-hovered {
+    background: none;
+    background-color: white; }
+  body[data-country='COG'] .jstree-default .jstree-disabled.jstree-clicked {
+    background: none;
+    background-color: #fdf5f5; }
+  body[data-country='COG'] .irs-bar {
+    border-top: 1px solid #db514b;
+    border-bottom: 1px solid #db514b; }
+  body[data-country='COG'] .irs-bar-edge {
+    border: 1px solid #db514b; }
+  body[data-country='COG'] .irs-bar, body[data-country='COG'] .irs-bar-edge {
+    background: #db514b; }
+  body[data-country='COG'] .irs-from, body[data-country='COG'] .irs-to, body[data-country='COG'] .irs-single {
+    color: #db514b; }
+  body[data-country='COG'] [data-selector-time] .day.active {
+    background-color: #db514b; }
+    body[data-country='COG'] [data-selector-time] .day.active:hover {
+      background-color: #a58381; }
+  body[data-country='COG'] [data-selector-time] .day.today:before {
+    border-bottom-color: #db514b; }
+  body[data-country='COG'] [data-selector-time] .month.active {
+    background-color: #db514b; }
+  body[data-country='COG'] [data-selector-time] .year.active {
+    background-color: #db514b; }
+  body[data-country='COG'] [data-selector-time] .fx-time-addon {
+    color: #db514b; }
+  body[data-country='COG'] [data-selector-time] [data-action="incrementHours"], body[data-country='COG'] [data-selector-time] [data-action="decrementHours"], body[data-country='COG'] [data-selector-time] [data-action="incrementMinutes"], body[data-country='COG'] [data-selector-time] [data-action="decrementMinutes"] {
+    color: #db514b; }
+  body[data-country='COG'] [data-selector-time] [data-action="togglePicker"] span {
+    color: #db514b; }
+  body[data-country='COG'] .cat-toolbar button:hover {
+    color: #db514b; }
+  body[data-country='COG'] .bootstrap-table .pagination > li > a, body[data-country='COG'] .bootstrap-table .pagination > li > span {
+    color: #db514b; }
+  body[data-country='COG'] .bootstrap-table .pagination > .active > a, body[data-country='COG'] .bootstrap-table .pagination > .active > a:hover, body[data-country='COG'] .bootstrap-table .pagination > .active > a:focus, body[data-country='COG'] .bootstrap-table .pagination > .active > span, body[data-country='COG'] .bootstrap-table .pagination > .active > span:hover, body[data-country='COG'] .bootstrap-table .pagination > .active > span:focus {
+    color: white;
+    background-color: #db514b;
+    border-color: #db514b; }
+  body[data-country='COG'] .vb-toolbar button:hover {
+    color: #db514b; }
+  body[data-country='COG'] .dropdown-menu a {
+    color: inherit; }
+  body[data-country='COG'] .swiper-button-prev {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'#db514b'%2F%3E%3C%2Fsvg%3E"); }
+  body[data-country='COG'] .swiper-button-next {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'#db514b'%2F%3E%3C%2Fsvg%3E"); }
+  body[data-country='COG'] .swiper-pagination-bullet-active {
+    background: #db514b; }
+  body[data-country='COG'] .gt-row-over td {
+    border-bottom-color: #db514b; }
+  body[data-country='COG'] .fm-controller-box-item .ui-widget-header {
+    background-color: #db514b; }
+  body[data-country='COG'] .pulse-button {
     box-shadow: 0 0 0 0 rgba(219, 81, 75, 0.7); }
 @-webkit-keyframes pulse {
   to {
